force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_Holder_Name__c</fullName>
    <formula>cpm__Payment_Profile__r.cpm__Holder_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Holder Name</label>
    <type>Text</type>
</CustomField>