force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_Number__c</fullName>
    <formula>IF ( NOT(ISBLANK(cpm__Payment_Profile__r.cpm__IBAN__c
)) , cpm__Payment_Profile__r.cpm__IBAN__c
 , cpm__Payment_Profile__r.cpm__Bank_Account__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>