force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Address_Line__c.field-meta.xml
<CustomField>
    <fullName>cpm__Address_Line__c</fullName>
    <formula>IF ( 
    NOT ( ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__c ) ), 
        IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.MailingStreet ) ), 
        cpm__Payment_Profile__r.cpm__Contact__r.MailingStreet ,
        &quot;&quot; ),
    IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Account__r.ShippingStreet ) ), 
        cpm__Payment_Profile__r.cpm__Account__r.ShippingStreet ,
        &quot;&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line</label>
    <type>Text</type>
</CustomField>