force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>cpm__Branch_Code__c</fullName>
    <description>The branch code this mandate is valid for.</description>
    <formula>cpm__Payment_Profile__r.cpm__Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The branch code this mandate is valid for.</inlineHelpText>
    <label>Branch code</label>
    <type>Text</type>
</CustomField>