force-app/main/default/objects/cpm__Mandate__c/fields/cpm__City__c.field-meta.xml
<CustomField>
    <fullName>cpm__City__c</fullName>
    <formula>IF ( 
    NOT ( ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__c ) ), 
        IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.MailingCity ) ), 
        cpm__Payment_Profile__r.cpm__Contact__r.MailingCity ,
        &quot;&quot; ),
    IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Account__r.ShippingCity ) ), 
        cpm__Payment_Profile__r.cpm__Account__r.ShippingCity ,
        &quot;&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>