force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Contact__c.field-meta.xml
<CustomField>
    <fullName>cpm__Contact__c</fullName>
    <description>The name of the contact that issued the mandate.</description>
    <formula>cpm__Payment_Profile__r.cpm__Contact__r.FirstName &amp; &quot; &quot; &amp;  cpm__Payment_Profile__r.cpm__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the contact that issued the mandate.</inlineHelpText>
    <label>Contact</label>
    <type>Text</type>
</CustomField>