force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Country__c.field-meta.xml
<CustomField>
    <fullName>cpm__Country__c</fullName>
    <formula>IF ( 
    NOT ( ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__c ) ), 
        IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.MailingCountry ) ), 
        cpm__Payment_Profile__r.cpm__Contact__r.MailingCountry ,
        &quot;&quot; ),
    IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Account__r.ShippingCountry ) ), 
        cpm__Payment_Profile__r.cpm__Account__r.ShippingCountry ,
        &quot;&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>