force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Custom_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Custom_Reference__c</fullName>
    <description>Allows you to override the default mandate reference with a custom value.</description>
    <label>Custom Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>