force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>cpm__Date_Signed__c</fullName>
    <description>The signing date for this mandate.</description>
    <inlineHelpText>The signing date for this mandate.</inlineHelpText>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>