force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Email__c.field-meta.xml
<CustomField>
    <fullName>cpm__Email__c</fullName>
    <formula>IF (  NOT( ISBLANK(cpm__Payment_Profile__r.cpm__Contact__r.Email) ) , cpm__Payment_Profile__r.cpm__Contact__r.Email , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>