force-app/main/default/objects/cpm__Mandate__c/fields/cpm__External_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__External_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Customer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>