force-app/main/default/objects/cpm__Mandate__c/fields/cpm__FirstName__c.field-meta.xml
<CustomField>
    <fullName>cpm__FirstName__c</fullName>
    <formula>IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.FirstName ) ) , cpm__Payment_Profile__r.cpm__Contact__r.FirstName , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstName</label>
    <type>Text</type>
</CustomField>