force-app/main/default/objects/cpm__Mandate__c/fields/cpm__IBAN__c.field-meta.xml
<CustomField>
    <fullName>cpm__IBAN__c</fullName>
    <description>The IBAN this mandate is valid for.</description>
    <formula>cpm__Payment_Profile__r.cpm__IBAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The IBAN this mandate is valid for.</inlineHelpText>
    <label>IBAN</label>
    <type>Text</type>
</CustomField>