force-app/main/default/objects/cpm__Mandate__c/fields/cpm__LastName__c.field-meta.xml
<CustomField>
    <fullName>cpm__LastName__c</fullName>
    <formula>IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.LastName ) ) , cpm__Payment_Profile__r.cpm__Contact__r.LastName , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName</label>
    <type>Text</type>
</CustomField>