force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Mandate_ID__c.field-meta.xml
<CustomField>
    <fullName>cpm__Mandate_ID__c</fullName>
    <description>The final mandate reference, gives the custom reference if present, the auto generated one otherwise.</description>
    <formula>BLANKVALUE(cpm__Custom_Reference__c, 

IF( cpm__Payment_Processor__c  == &apos;PaymentHub-BACS&apos; , cpm__Prefix__c &amp;&quot;&quot;&amp; UPPER(CASESAFEID(Id)) , cpm__Prefix__c &amp;&quot;&quot;&amp; CASESAFEID(Id))


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The final mandate reference, gives the custom reference if present, the auto generated one otherwise.</inlineHelpText>
    <label>Mandate ID</label>
    <type>Text</type>
</CustomField>