force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Mandate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>cpm__Mandate_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mandate Schedule</label>
    <referenceTo>cpm__Mandate_Schedule__c</referenceTo>
    <relationshipLabel>Mandates</relationshipLabel>
    <relationshipName>Mandates</relationshipName>
    <type>Lookup</type>
</CustomField>