force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>