force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Payment_Profile__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The payment profile this mandate is valid for.</description>
    <inlineHelpText>The payment profile this mandate is valid for.</inlineHelpText>
    <label>Payment Profile</label>
    <referenceTo>cpm__Payment_Profile__c</referenceTo>
    <relationshipName>Mandates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>