force-app/main/default/objects/cpm__Mandate__c/fields/cpm__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>cpm__PostalCode__c</fullName>
    <formula>IF ( 
    NOT ( ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__c ) ), 
        IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.MailingPostalCode ) ), 
        cpm__Payment_Profile__r.cpm__Contact__r.MailingPostalCode ,
        &quot;&quot; ),
    IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Account__r.ShippingPostalCode ) ), 
        cpm__Payment_Profile__r.cpm__Account__r.ShippingPostalCode ,
        &quot;&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PostalCode</label>
    <type>Text</type>
</CustomField>