force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Prefix__c.field-meta.xml
<CustomField>
    <fullName>cpm__Prefix__c</fullName>
    <inlineHelpText>Enter a value if you want to prefix the Mandate ID</inlineHelpText>
    <label>Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>