force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Prenotification_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Prenotification_Date__c</fullName>
    <description>The date a pre-notification was sent.</description>
    <inlineHelpText>The date a pre-notification was sent.</inlineHelpText>
    <label>Pre-notification Date</label>
    <type>Date</type>
</CustomField>