force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>cpm__Sort_Code__c</fullName>
    <label>Sort Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>