force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Title__c.field-meta.xml
<CustomField>
    <fullName>cpm__Title__c</fullName>
    <formula>IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.Title ) ) , cpm__Payment_Profile__r.cpm__Contact__r.Title , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>