force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
                <default>true</default>
                <label>Recurring</label>
            </value>
            <value>
                <fullName>One-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>