force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Unique_Mandate_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Unique_Mandate_Id__c</fullName>
    <description>Unique mandate ID that is filled by a workflow. This field is needed to make sure we have unique ids throughout the ORG</description>
    <externalId>true</externalId>
    <label>Unique Mandate Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>