force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Use_Last_on_next_run__c.field-meta.xml
<CustomField>
    <fullName>cpm__Use_Last_on_next_run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the transactions using this mandate are offered as FINAL to the bank.</description>
    <inlineHelpText>When checked, the transactions using this mandate are offered as FINAL to the bank.</inlineHelpText>
    <label>Use Last on next run</label>
    <type>Checkbox</type>
</CustomField>