force-app/main/default/objects/cpm__Mandate__c/fields/cpm__Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>cpm__Valid_Until__c</fullName>
    <description>The valid until date for this mandate.</description>
    <formula>/*IF ( NOT(ISBLANK(End_Date__c)) , End_Date__c, 
IF (NOT(ISBLANK(Last_Used__c)) , DATE( YEAR(Last_Used__c) + 3 , MONTH(Last_Used__c), DAY(Last_Used__c) ),
IF (NOT(ISBLANK(Date_Signed__c)), DATE( YEAR(Date_Signed__c) + 3, MONTH(Date_Signed__c), DAY(Date_Signed__c) ), Null 
)))*/

BLANKVALUE(cpm__End_Date__c,
IF(
  AND(
    MONTH( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) = 2,
    DAY( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, 400 ) = 0, 
        AND( 
          MOD( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, 4 ) = 0,
          MOD( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, 2, 28),
  DATE( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, MONTH( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ), DAY( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>