force-app/main/default/objects/cpm__Mandate__c/fields/gcf__Personnummer__c.field-meta.xml
<CustomField>
    <fullName>gcf__Personnummer__c</fullName>
    <formula>IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.gcf__Personnummer__c ) ) , cpm__Payment_Profile__r.cpm__Contact__r.gcf__Personnummer__c , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personnummer</label>
    <type>Text</type>
</CustomField>