force-app/main/default/objects/cpm__Mandate__c/fields/phstr__Payment_Method_Id__c.field-meta.xml
<CustomField>
    <fullName>phstr__Payment_Method_Id__c</fullName>
    <externalId>true</externalId>
    <label>Payment Method Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>