force-app/main/default/objects/cpm__Mandate__c/fields/pp4ph__PayPal_Billing_Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>pp4ph__PayPal_Billing_Agreement_Id__c</fullName>
    <description>Used to store the billing agreement id that is received from paypal in order to get the Mandate Id.</description>
    <externalId>true</externalId>
    <label>PayPal Billing Agreement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>