force-app/main/default/objects/cpm__Mandate__c/fields/proh__File__c.field-meta.xml
<CustomField>
    <fullName>proh__File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentHub File</label>
    <referenceTo>proh__File__c</referenceTo>
    <relationshipLabel>Mandates</relationshipLabel>
    <relationshipName>Mandates</relationshipName>
    <type>Lookup</type>
</CustomField>